--- a/style.css
+++ b/style.css
@@ -7,9 +7,28 @@
 body {
 	position: relative;
 	height: fit-content;
+	background-color: black;
+	background: linear-gradient(45deg, black, rgb(43, 43, 43));
+}
+h1,
+h2 {
+	color: white;
+}
+section {
+	height: 50dvh;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: end;
+	font-size: 36px;
+	padding: 0px 20px;
+	background-image: url(https://www.shutterstock.com/image-vector/3d-realistic-style-megaphone-vector-600nw-2016379982.jpg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-color: #ffae0b;
 }
 header {
-	background-color: darkblue;
+	background: linear-gradient(0deg, red, darkred);
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -21,8 +40,8 @@ header {
 }
 .create {
 	width: 300px;
-	background-color: red;
-	color: white;
+	background: linear-gradient(0deg, gold, rgb(184, 156, 0));
+	color: black;
 }
 .loupe {
 	width: 20px;
@@ -34,20 +53,24 @@ button {
 }
 main {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: wrap;
 	align-items: center;
 	margin: 50px 0px;
 }
 .annonce {
-	border: 2px solid black;
+	border: 2px solid white;
 	border-radius: 25px;
-	width: 50%;
+	width: 30%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	padding: 10px;
 	margin: 20px;
 	gap: 10px;
+	color: white;
+	box-shadow: 0px 0px 10px white;
+	text-align: justify;
 }
 img {
 	width: fit-content;
@@ -57,14 +80,16 @@ a {
 	color: white;
 }
 .signup {
-	border: 2px solid black;
+	border: 2px solid white;
+	box-shadow: 0px 0px 10px white;
 	border-radius: 25px;
 	padding: 20px;
 	gap: 10px;
 	display: flex;
 	flex-direction: column;
 	height: fit-content;
-	width: 25%;
+	width: 25vw;
+	color: white;
 }
 .signup h2 {
 	text-align: center;
@@ -81,18 +106,22 @@ input {
 .submit {
 	width: fit-content;
 	border-radius: 25px;
-	background-color: darkblue;
-	color: white;
+	background: linear-gradient(0deg, gold, rgb(184, 156, 0));
+	color: black;
 	align-self: center;
 }
 .login {
-	border: 2px solid black;
+	border: 2px solid white;
 	display: flex;
 	flex-direction: column;
 	border-radius: 25px;
 	padding: 20px;
 	gap: 10px;
-	width: 25%;
+	width: 25vw;
+	color: white;
+}
+.login h2 {
+	text-align: center;
 }
 footer {
 	width: 100%;
@@ -101,6 +130,6 @@ footer {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background-color: darkblue;
+	background: linear-gradient(0deg, red, darkred);
 	color: white;
 }
