--- a/src/Annonce/annonce.css
+++ b/src/Annonce/annonce.css
@@ -28,7 +28,7 @@ section {
 	background-color: #ffae0b;
 }
 header {
-	background: linear-gradient(0deg, red, darkred);
+	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -129,6 +129,9 @@ input {
 .login h2 {
 	text-align: center;
 }
+.description {
+	height: 20vh;
+}
 footer {
 	width: 100%;
 	height: 20vh;
@@ -136,6 +139,6 @@ footer {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background: linear-gradient(0deg, red, darkred);
+	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
 	color: white;
 }
