--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -28,7 +28,7 @@ section {
 	background-color: #ffae0b;
 }
 header {
-	background: linear-gradient(0deg, red, darkred);
+	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -136,6 +136,6 @@ footer {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background: linear-gradient(0deg, red, darkred);
+	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
 	color: white;
 }
