--- a/src/Annonce/annonce.css
+++ b/src/Annonce/annonce.css
@@ -1,9 +1,3 @@
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-
 * {
 	padding: 0px;
 	margin: 0px;
@@ -12,37 +6,26 @@
 
 body {
 	position: relative;
+	height: fit-content;
+	background-color: black;
 	background: linear-gradient(45deg, black, rgb(43, 43, 43));
-	height: 100dvh;
 }
-
 h1,
-h2,
-p {
+h2 {
 	color: white;
-	font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif, monospace;
 }
-
-button {
-	padding: 15px 10px;
-	border-radius: 25px;
-	font-weight: 700;
-}
-button:hover {
-	cursor: pointer;
-	padding: 15px;
-	transition: 0.5s ease-in-out;
-	font-size: 20px;
-}
-
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-
-header h2 {
+section {
+	height: 50dvh;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: end;
 	font-size: 36px;
+	padding: 0px 20px;
+	background-image: url(https://www.shutterstock.com/image-vector/3d-realistic-style-megaphone-vector-600nw-2016379982.jpg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-color: #ffae0b;
 }
 header {
 	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
@@ -50,31 +33,58 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0px 2vw;
+	padding: 0px 10px;
 	color: white;
 	width: 100%;
 	height: 10vh;
 }
-
-header a {
-	text-decoration: none;
+.create {
+	width: 300px;
+	background: linear-gradient(0deg, gold, rgb(184, 156, 0));
+	color: black;
 }
-
+.loupe {
+	width: 20px;
+	height: 15px;
+}
+button {
+	padding: 10px;
+	border-radius: 25px;
+}
 main {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	align-items: center;
-	justify-content: center;
-	margin: 5vh 0px;
-	height:65%;
+	margin: 50px 0px;
 }
-
+.annonce {
+	border: 2px solid white;
+	border-radius: 25px;
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 10px;
+	margin: 20px;
+	gap: 10px;
+	color: white;
+	box-shadow: 0px 0px 10px white;
+	text-align: justify;
+}
 img {
 	width: fit-content;
 	height: 100px;
 }
-
-.create-annonce {
+a {
+	color: white;
+}
+.form {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+.signup {
 	border: 2px solid white;
 	box-shadow: 0px 0px 10px white;
 	border-radius: 25px;
@@ -83,17 +93,21 @@ img {
 	display: flex;
 	flex-direction: column;
 	height: fit-content;
-	width: 500px;
+	width: 25vw;
 	color: white;
 }
-.create-annonce h1 {
+.signup h2 {
 	text-align: center;
 }
 input {
 	border-radius: 25px;
-	padding: 10px;
+	padding: 5px;
 }
-
+.checkbox {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
 .submit {
 	width: fit-content;
 	border-radius: 25px;
@@ -101,19 +115,30 @@ input {
 	color: black;
 	align-self: center;
 }
-
+.login {
+	border: 2px solid white;
+	display: flex;
+	flex-direction: column;
+	border-radius: 25px;
+	padding: 20px;
+	gap: 10px;
+	width: 25vw;
+	color: white;
+	box-shadow: 0px 0px 10px white;
+}
+.login h2 {
+	text-align: center;
+}
 .description {
-	height: 15vh;
+	height: 20vh;
 }
 footer {
 	width: 100%;
-	height: 10vh;
+	height: 20vh;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
 	color: white;
-	position: absolute;
-	bottom: 0px;
 }
