--- a/src/Index/index.css
+++ b/src/Index/index.css
@@ -1,191 +1,165 @@
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-/* MISE EN PAGE GENERALE */
-
 * {
-	padding: 0px;
-	margin: 0px;
-	box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
-	position: relative;
-	height: fit-content;
-	background-color: black;
+  position: relative;
+  height: fit-content;
+  background-color: black;
 }
-
 h1,
 h2,
 p {
-	color: white;
-	font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif, monospace;
+  color: white;
+  font-family: Ariral, sans-serif, monospace;
 }
-
-a {
-	color: white;
+section {
+  height: 50dvh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  font-size: 26px;
+  padding: 0px 20px;
+  background-image: url(https://www.chromethemer.com/download/hd-wallpapers/colorful-space-cat-7680x4320.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: black;
+  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.281);
+}
+header {
+  background: linear-gradient(0deg, purple, rgb(61, 0, 61));
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 10px;
+  color: white;
+  width: 100%;
+  height: 10vh;
+}
+.create {
+  width: 20vw;
+  background: linear-gradient(0deg, orange, rgb(182, 155, 0));
+  color: black;
+  font-weight: 700;
+  box-shadow: 0px 0px 10px gold;
+}
+.search {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+.btn-loupe {
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  margin-left: -5px;
 }
 
 button {
-	padding: 15px 10px;
-	border-radius: 25px;
-	font-weight: 700;
-	font-size: 1rem;
+  padding: 10px;
+  border-radius: 25px;
 }
-
-button:hover {
-	cursor: pointer;
-	padding: 15px;
-	transition: 0.5s ease-in-out;
-	font-size: 20px;
-}
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-/* MISE EN PAGE DU HEADER */
-
-header h2 {
-	font-size: 36px;
-}
-header {
-	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0px 2vw;
-	color: white;
-	width: 100%;
-	height: 10vh;
-	position: fixed;
-	top: 0px;
-}
-nav button {
-	margin: 10px;
-}
-/* MISE EN PAGE DES BOUTONS DU HEADER */
-/* MISE EN PAGE DES BOUTONS DU HEADER */
-/* MISE EN PAGE DES BOUTONS DU HEADER */
-/* MISE EN PAGE DES BOUTONS DU HEADER */
-/* MISE EN PAGE DES BOUTONS DU HEADER */
-
-.btn-annonce {
-	width: 15vw;
-	background: linear-gradient(0deg, orange, rgb(182, 155, 0));
-	color: black;
-	font-weight: 700;
-	box-shadow: 0px 0px 10px gold;
-}
-
 .btn-register {
-	background: linear-gradient(0deg, orange, rgb(182, 155, 0));
-	box-shadow: 0px 0px 10px gold;
+  background: linear-gradient(0deg, orange, rgb(182, 155, 0));
 }
-
+button:hover {
+  cursor: pointer;
+}
 .disconnect {
-	background-color: red;
-	color: white;
+  background-color: red;
+  color: white;
 }
 .hidden {
-	display: none;
+  display: none;
 }
-
-/* MISE EN PAGE DE L'ACCROCHE DU SITE */
-/* MISE EN PAGE DE L'ACCROCHE DU SITE */
-/* MISE EN PAGE DE L'ACCROCHE DU SITE */
-/* MISE EN PAGE DE L'ACCROCHE DU SITE */
-/* MISE EN PAGE DE L'ACCROCHE DU SITE */
-
-section {
-	height: 65dvh;
-	margin: 10vh 0px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: end;
-	font-size: 2rem;
-	box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.281);
-}
-section img {
-	height: 100%;
-	width: 900px;
-}
-.section-img {
-	height: 100%;
-	width: 50%;
-}
-section h1 {
-	text-align: center;
-	width: 75%;
-}
-/* MISE EN PAGE DU MAIN CONTENANT LES ANNONCES */
-/* MISE EN PAGE DU MAIN CONTENANT LES ANNONCES */
-/* MISE EN PAGE DU MAIN CONTENANT LES ANNONCES */
-/* MISE EN PAGE DU MAIN CONTENANT LES ANNONCES */
-/* MISE EN PAGE DU MAIN CONTENANT LES ANNONCES */
-
 main {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-items: center;
-	justify-content: center;
-	gap: 3vh;
-	width: 100%;
-	margin: 5vh 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 15vh 2%;
 }
-/* MISE EN PAGE DES ANNONCES DANS LE MAIN */
-/* MISE EN PAGE DES ANNONCES DANS LE MAIN */
-/* MISE EN PAGE DES ANNONCES DANS LE MAIN */
-/* MISE EN PAGE DES ANNONCES DANS LE MAIN */
-/* MISE EN PAGE DES ANNONCES DANS LE MAIN */
-
 .annonce {
-	border-radius: 25%;
-	border-bottom-right-radius: 0px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: justify;
-	width: 400px;
-	height: 500px;
-	padding: 2%;
-	margin: 5% 1%;
-	gap: 1vw;
-	color: white;
-	box-shadow: 0px 0px 20px gold;
-	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
-	border: 2px solid gold;
+  border-radius: 25px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  margin: 20px;
+  gap: 10px;
+  color: white;
+  box-shadow: 0px 0px 10px white;
+  text-align: justify;
+  cursor: pointer;
 }
-.annonce-p {
-	height: 100%;
-	overflow-y: scroll;
-	scroll-behavior: smooth;
-	scrollbar-width: thin;
-	scrollbar-color: gold black;
-	padding: 0px 20px;
+img {
+  width: fit-content;
+  height: 100px;
 }
-.annonce img {
-	width: fit-content;
-	height: 200px;
-	border-radius: 50%;
+a {
+  color: white;
 }
-/* MISE EN PAGE DU FOOTER */
-/* MISE EN PAGE DU FOOTER */
-/* MISE EN PAGE DU FOOTER */
-/* MISE EN PAGE DU FOOTER */
-/* MISE EN PAGE DU FOOTER */
-
+.form {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.signup {
+  border: 2px solid white;
+  box-shadow: 0px 0px 10px white;
+  border-radius: 25px;
+  padding: 20px;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  width: 25vw;
+  color: white;
+}
+.signup h2 {
+  text-align: center;
+}
+input {
+  border-radius: 25px;
+  padding: 5px;
+}
+.checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.submit {
+  width: fit-content;
+  border-radius: 25px;
+  background: linear-gradient(0deg, gold, rgb(184, 156, 0));
+  color: black;
+  align-self: center;
+}
+.login {
+  border: 2px solid white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 25px;
+  padding: 20px;
+  gap: 10px;
+  width: 25vw;
+  color: white;
+  box-shadow: 0px 0px 10px white;
+}
+.login h2 {
+  text-align: center;
+}
 footer {
-	width: 100%;
-	height: 20vh;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	background: linear-gradient(180deg, purple, rgb(61, 0, 61));
-	color: white;
-	box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.281);
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(180deg, purple, rgb(61, 0, 61));
+  color: white;
+  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.281);
 }
