--- a/src/Index/modal.css
+++ b/src/Index/modal.css
@@ -4,7 +4,6 @@
 .overlay {
   position: fixed;
   top: 0;
-  left: -15px;
   background-color: #000000d3;
   width: 100vw;
   height: 100vh;
@@ -25,7 +24,10 @@
   z-index: 2;
 }
 .annonceModal {
-  display: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -33,13 +35,17 @@
 .titleModal {
   padding-bottom: 10px;
   color: black;
+  display: block;
+  text-align: center;
 }
 .imageModal {
-  padding-bottom: 10px;
+  padding: 10px 0;
+  width: 100px;
 }
 .descriptionModal {
   padding-bottom: 10px;
   color: black;
+  display: block;
 }
 .btnChangeModal {
   position: relative;
@@ -55,5 +61,8 @@
   color: red;
   top: 10px;
   right: 10px;
+  padding: 5px 8px;
+}
+.btnExitModal:hover {
   padding: 5px 8px;
 }
