--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -5,34 +5,34 @@
 /* MISE EN PAGE GENERALE */
 
 * {
-	padding: 0px;
-	margin: 0px;
-	box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
-	position: relative;
-	background: linear-gradient(45deg, black, rgb(43, 43, 43));
-	height: 110dvh;
+  position: relative;
+  background: linear-gradient(45deg, black, rgb(43, 43, 43));
+  height: 150dvh;
 }
 
 h1,
 h2,
 p {
-	color: white;
-	font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif, monospace;
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif, monospace;
 }
 
 button {
-	padding: 15px 10px;
-	border-radius: 25px;
-	font-weight: 700;
+  padding: 15px 10px;
+  border-radius: 25px;
+  font-weight: 700;
 }
 button:hover {
-	cursor: pointer;
-	padding: 15px;
-	transition: 0.5s ease-in-out;
-	font-size: 20px;
+  cursor: pointer;
+  padding: 15px;
+  transition: 0.5s ease-in-out;
+  font-size: 20px;
 }
 /* MISE EN PAGE DU HEADER */
 /* MISE EN PAGE DU HEADER */
@@ -41,22 +41,22 @@ button:hover {
 /* MISE EN PAGE DU HEADER */
 
 header h2 {
-	font-size: 36px;
+  font-size: 36px;
 }
 header {
-	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0px 2vw;
-	color: white;
-	width: 100%;
-	height: 10vh;
+  background: linear-gradient(0deg, purple, rgb(61, 0, 61));
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 2vw;
+  color: white;
+  width: 100%;
+  height: 10vh;
 }
 
 header a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 /* MISE EN PAGE DU MAIN CONTENANT L'INSCRIPTION */
@@ -66,12 +66,12 @@ header a {
 /* MISE EN PAGE DU MAIN CONTENANT L'INSCRIPTION */
 
 main {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	margin: 0vh 0px;
-	height: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0vh 0px;
+  height: 80%;
 }
 
 /* MISE EN PAGE DE L'INSCRIPTION */
@@ -81,49 +81,53 @@ main {
 /* MISE EN PAGE DE L'INSCRIPTION */
 
 .signup h2 {
-	text-align: center;
+  text-align: center;
 }
 .signup {
-	border: 2px solid white;
-	box-shadow: 0px 0px 10px white;
-	border-radius: 25px;
-	padding: 40px;
-	gap: 10px;
-	display: flex;
-	flex-direction: column;
-	height: fit-content;
-	width: 500px;
-	color: white;
+  border: 2px solid white;
+  box-shadow: 0px 0px 10px white;
+  border-radius: 25px;
+  padding: 40px;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  width: 500px;
+  color: white;
 }
 
 input {
-	border-radius: 25px;
-	padding: 10px;
+  border-radius: 25px;
+  padding: 10px;
 }
 .checkbox {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 .submit {
-	width: fit-content;
-	border-radius: 25px;
-	background: linear-gradient(0deg, gold, rgb(184, 156, 0));
-	color: black;
-	align-self: center;
+  width: fit-content;
+  border-radius: 25px;
+  background: linear-gradient(0deg, gold, rgb(184, 156, 0));
+  color: black;
+  align-self: center;
 }
 a {
-	color: gold;
+  color: gold;
 }
 footer {
-	width: 100%;
-	height: 10vh;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	background: linear-gradient(0deg, purple, rgb(61, 0, 61));
-	color: white;
-	position: absolute;
-	bottom: 0px;
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(0deg, purple, rgb(61, 0, 61));
+  color: white;
+  position: absolute;
+  bottom: 0px;
+}
+.textErrorButton,
+.textErrorEmail {
+  color: red;
 }
